[project]
name = "drug-discovery-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "yumanuralfath",email = "yumanuralfath2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chembl-webresource-client (>=0.10.9,<0.11.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "drug_discovery_ml", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
